testdata/result/statement/!bad_lex_first_token_query.sql.txt
--- !bad_lex_first_token_query.sql
'hello
--- Error
syntax error: testdata/input/query/!bad_lex_first_token_query.sql:1:1: unclosed string literal
  1|  'hello
   |  ^~~~~~


--- AST
&ast.BadStatement{
  BadNode: &ast.BadNode{
    NodeEnd: 6,
    Tokens:  []*token.Token{
      &token.Token{
        Kind: "<bad>",
        Raw:  "'hello",
        End:  6,
      },
    },
  },
}

--- SQL
'hello
